--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,22 @@
-{erl_opts, [debug_info]}.
-{deps, []}.
+{erl_opts, 
+    [
+        debug_info,
+        {src_dirs, ["src", "src/helpers"]}
+    ]}.
+
+{deps, [
+            {lager,             "3.6.8"},
+            {jiffy,             "0.15.2"},
+            {trails,            "2.1.0"},
+            {cowboy_swagger,    "2.1.0"},
+            {escalus,           {git, "git://github.com/esl/escalus.git", {ref, "58c2bf8"}}},
+            {usec,              {git, "git://github.com/esl/usec.git", {branch, "master"}}},
+            {exometer,          {git, "git://github.com/Feuerlabs/exometer.git", {ref, "7a7bd8d"}}},
+            {recon,             "2.4.0"},
+            {meck,              "0.8.12"},
+            {proper,            "1.3.0"},
+            {cowboy,            "2.3.0"},
+            {fusco,             {git, "https://github.com/esl/fusco.git", {ref, "de08ade"}}},
+            {amqp_client,       "3.7.9"}
+        ]}.
+    
