--- a/rebar.config
+++ b/rebar.config
@@ -1,22 +1,25 @@
 {erl_opts, 
     [
         debug_info,
-        {src_dirs, ["src", "src/helpers"]}
-    ]}.
+        {src_dirs, ["src", "src/helpers"]}]}.
 
-{deps, [
-            {lager,             "3.6.8"},
-            {jiffy,             "0.15.2"},
-            {trails,            "2.1.0"},
-            {cowboy_swagger,    "2.1.0"},
-            {escalus,           {git, "git://github.com/esl/escalus.git", {ref, "58c2bf8"}}},
-            {usec,              {git, "git://github.com/esl/usec.git", {branch, "master"}}},
-            {exometer,          {git, "git://github.com/Feuerlabs/exometer.git", {ref, "7a7bd8d"}}},
-            {recon,             "2.4.0"},
-            {meck,              "0.8.12"},
-            {proper,            "1.3.0"},
-            {cowboy,            "2.3.0"},
-            {fusco,             {git, "https://github.com/esl/fusco.git", {ref, "de08ade"}}},
-            {amqp_client,       "3.7.9"}
+%% Without this, "Callback info about the amoc_scenario behaviour is not available" errors dialyzer
+{dialyzer, [{warnings, [no_undefined_callbacks]}]}.
+
+
+{xref_checks,[
+    %% enable most checks, but avoid 'unused calls' which makes amoc-arsenal fail...
+    undefined_function_calls, undefined_functions, locals_not_used,
+    deprecated_function_calls, deprecated_functions
+]}.
+
+{deps, [    
+            {amoc,              {git, "git://github.com/esl/amoc.git", {tag, "1.2.1"}}}
         ]}.
+
+{relx, [
+    {release, {amoc_arsenal_xmpp, "0.1.0"}, [amoc_arsenal_xmpp]},
+    {dev_mode, false},
+    {include_src, false}
+    ]}.
     
