--- a/rebar.config
+++ b/rebar.config
@@ -1,2 +1,19 @@
-{erl_opts, [debug_info]}.
-{deps, []}.
+{erl_opts, [debug_info,
+            {parse_transform, lager_transform}]}.
+
+{deps, [{escalus, {git, "https://github.com/esl/escalus.git", {ref, "5794d0a"}}},
+        {amoc, {git, "https://github.com/esl/amoc", {ref, "79c4414"}}}]}.
+
+{xref_checks,[
+              %% enable most checks, but avoid 'unused calls' which makes amoc-arsenal fail...
+              undefined_function_calls, undefined_functions, locals_not_used,
+              deprecated_function_calls, deprecated_functions
+             ]}.
+
+{dialyzer, [{plt_extra_apps, [amoc]}]}.
+
+{relx, [
+        {release, {amoc_arsenal_xmpp, "0.1.0"}, [amoc_arsenal_xmpp]},
+        {dev_mode, false},
+        {include_src, false}
+       ]}.
