Build a docker image

--- a/rebar.config
+++ b/rebar.config
@@ -11,7 +11,10 @@
              ]}.
 
 {relx, [
-        {release, {amoc_arsenal_xmpp, "0.1.0"}, [amoc_arsenal_xmpp]},
+        {release, {amoc_arsenal_xmpp, {git, short}}, [amoc_arsenal_xmpp]},
         {dev_mode, false},
-        {include_src, false}
-       ]}.
+        {include_src, false},
+        {include_erts, true},
+        {extended_start_script, true}
+    ]}.
+
