--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ script:
   - rebar3 xref
   - rebar3 dialyzer
   - OTP_VSN=${TRAVIS_OTP_RELEASE}-1 ./build_docker_image.sh
+  - ./test_docker_image.sh
 
 cache:
   directories:
