Add gradualizer plugin

--- a/rebar.config
+++ b/rebar.config
@@ -15,3 +15,7 @@
         {dev_mode, false},
         {include_src, false}
        ]}.
+
+{plugins, [
+  {gradualizer, {git, "https://github.com/aleklisi/Gradualizer", {branch, "master"}}}
+]}.
