use esl/amoc from branch amoc-2.0.0-cleanup

--- a/rebar.config
+++ b/rebar.config
@@ -1,20 +1,26 @@
-{erl_opts, [debug_info,
-            {parse_transform, lager_transform}]}.
+{ erl_opts, [
+    debug_info,
+    {parse_transform, lager_transform}
+]}.
 
-{deps, [{escalus, {git, "https://github.com/esl/escalus.git", {ref, "5794d0a"}}},
-        {amoc, {git, "https://github.com/esl/amoc", "2.0.0-beta"}}]}.
+{ deps, [
+    {escalus, {git, "https://github.com/esl/escalus.git", {ref, "5794d0a"}}},
+    {amoc, {git, "https://github.com/esl/amoc", {ref, "de4d11a"}}},
+    {lager, "3.6.8"}
+]}.
 
-{xref_checks,[
-              %% enable most checks, but avoid 'unused calls' which makes amoc-arsenal fail...
-              undefined_function_calls, undefined_functions, locals_not_used,
-              deprecated_function_calls, deprecated_functions
-             ]}.
+{ xref_checks, [
+    %% enable most checks, but avoid 'unused calls' which makes amoc-arsenal fail...
+    undefined_function_calls, undefined_functions, locals_not_used,
+    deprecated_function_calls, deprecated_functions
+]}.
 
-{relx, [
-        {release, {amoc_arsenal_xmpp, {git, short}}, [amoc_arsenal_xmpp]},
-        {dev_mode, false},
-        {include_src, false},
-        {include_erts, true},
-        {extended_start_script, true}
-    ]}.
+{ relx, [
+    {release, {amoc_arsenal_xmpp, {git, short}}, [amoc_arsenal_xmpp]},
+    {dev_mode, false},
+    {include_src, false},
+    {include_erts, true},
+    {extended_start_script, true},
+    {sys_config, "rel/app.config"}
+  ]}.
 
