removing calls of depecated amoc_metrics functions

--- a/rel/app.config
+++ b/rel/app.config
@@ -16,7 +16,9 @@
     {amoc, [{metrics_preconfigured, [{times, connection},
                                      {counters, connections},
                                      {counters, connection_failures}]},
-            {extra_compilation_flags, [{parse_transform, lager_transform}]}]},
+            {extra_compilation_flags, [{parse_transform, lager_transform}]},
+            {messages_spiral_name, messages_sent},
+            {message_ttd_histogram_name, message_ttd}]},
     {ssl, [{session_cb, amoc_always_null_ssl_session_cache}]}
 ]   .
 
