--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 
 { deps, [
     {escalus, {git, "https://github.com/esl/escalus.git", {ref, "5794d0a"}}},
-    {amoc, {git, "https://github.com/esl/amoc", {ref, "e21545819f52ac6d6310922fae42450000e8d1be"}}},
+    {amoc, {git, "https://github.com/esl/amoc", {tag, "2.0.1"}}},
     {lager, "3.6.8"}
 ]}.
 
