updating to the new amoc configuration format

--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 
 { deps, [
     {escalus, {git, "https://github.com/esl/escalus.git", {ref, "5794d0a"}}},
-    {amoc, {git, "https://github.com/esl/amoc", {tag, "2.0.1"}}},
+    {amoc, {git, "https://github.com/esl/amoc", {ref, "f02a1f7"}}},
     {lager, "3.6.8"}
 ]}.
 
