--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,3 @@
- # This is a basic workflow to help you get started with Actions
-
  name: CI
 
  # Controls when the action will run.
@@ -10,16 +8,13 @@
    pull_request:
      branches: [ master ]
 
- # A workflow run is made up of one or more jobs that can run sequentially or in parallel
  jobs:
    test:
      name: OTP ${{matrix.otp}}
      strategy:
        matrix:
-         otp: ['22.0', '21.3']
+         otp: ['22.3', '21.3']
      runs-on: 'ubuntu-20.04'
-     env:
-       OTP_RELEASE: ${{ matrix.otp }}
      steps:
        - uses: actions/checkout@v2
          with:
@@ -33,6 +28,19 @@
          run: ./rebar3 xref
        - name: run dializer check
          run: ./rebar3 dialyzer
+
+   integration_test:
+     name: docker container test with OTP ${{matrix.otp}}
+     strategy:
+       matrix:
+         otp: ['22.3', '21.3']
+     runs-on: 'ubuntu-20.04'
+     env:
+       OTP_RELEASE: ${{ matrix.otp }}
+     steps:
+       - uses: actions/checkout@v2
+         with:
+           fetch-depth: 0
        - name: build docker image
          run: ./ci/build_docker_image.sh
        - name: test docker image
