Update to escalus using fast_scram

--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 ]}.
 
 { deps, [
-    {escalus, {git, "https://github.com/esl/escalus.git", {ref, "5794d0a"}}},
+    {escalus, {git, "https://github.com/esl/escalus.git", {branch, "master"}}},
     {amoc, {git, "https://github.com/esl/amoc", {ref, "f02a1f7"}}},
     {lager, "3.6.8"}
 ]}.
