--- a/rebar.config
+++ b/rebar.config
@@ -1,12 +1,11 @@
 { erl_opts, [
-    debug_info,
-    {parse_transform, lager_transform}
+    debug_info
 ]}.
 
 { deps, [
-    {escalus, {git, "https://github.com/esl/escalus.git", {branch, "master"}}},
-    {amoc, {git, "https://github.com/esl/amoc", {ref, "f02a1f7"}}},
-    {lager, "3.6.8"}
+    {amoc, {git, "https://github.com/esl/amoc", {tag, "2.2.0"}}},
+    {escalus, "4.2.2"},
+    {jiffy, "1.0.8"}
 ]}.
 
 { xref_checks, [
@@ -16,10 +15,9 @@
 ]}.
 
 { relx, [
-    {release, {amoc_arsenal_xmpp, {git, short}}, [amoc_arsenal_xmpp]},
+    {release, {amoc_arsenal_xmpp, {git, short}}, [amoc_arsenal_xmpp, amoc]},
+    {debug_info, keep},
     {dev_mode, false},
-    {include_src, false},
-    {include_erts, true},
     {extended_start_script, true},
     {sys_config, "rel/app.config"}
   ]}.
