--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 ]}.
 
 { deps, [
-    {amoc, {git, "https://github.com/esl/amoc", {ref, "84ad5ea"}}},
+    {amoc, {git, "https://github.com/esl/amoc", {tag, "2.2.1"}}},
     {escalus, "4.2.2"},
     {jiffy, "1.0.8"}
 ]}.
