adding runtime_tools in release

--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,7 @@
 ]}.
 
 { relx, [
-    {release, {amoc_arsenal_xmpp, {git, short}}, [amoc_arsenal_xmpp, amoc]},
+    {release, {amoc_arsenal_xmpp, {git, short}}, [amoc_arsenal_xmpp, runtime_tools]},
     {debug_info, keep},
     {dev_mode, false},
     {extended_start_script, true},
