parametrising graphite host address in docker-compose setup
to provide custom graphite host use GRAPHITE_HOST env variable. if variable is not set, the default value is used - "host.docker.internal".

you can export it before before starting docker-compose env:
    export GRAPHITE_HOST="some.host.addr"
    docker compose up -d
or by supplying it as part of docker-compose command:
    GRAPHITE_HOST="10.251.192.82" docker compose up -d

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,14 +8,14 @@ services:
     networks:
       - amoc-test-network
     environment:
-      AMOC_GRAPHITE_HOST: '"host.docker.internal"'
+      AMOC_GRAPHITE_HOST: '"${GRAPHITE_HOST:-host.docker.internal}"'
   amoc-worker-1:
     hostname: "amoc-worker-1"
     image: "amoc-arsenal-xmpp"
     networks:
       - amoc-test-network
     environment:
-      AMOC_GRAPHITE_HOST: '"host.docker.internal"'
+      AMOC_GRAPHITE_HOST: '"${GRAPHITE_HOST:-host.docker.internal}"'
       AMOC_NODES: "['amoc_arsenal_xmpp@amoc-master']"
       AMOC_XMPP_SERVERS: '[[{host, <<"host.docker.internal">>}]]'
   amoc-worker-2:
@@ -24,7 +24,7 @@ services:
     networks:
       - amoc-test-network
     environment:
-      AMOC_GRAPHITE_HOST: '"host.docker.internal"'
+      AMOC_GRAPHITE_HOST: '"${GRAPHITE_HOST:-host.docker.internal}"'
       AMOC_NODES: "['amoc_arsenal_xmpp@amoc-master']"
       AMOC_XMPP_SERVERS: '[[{host, <<"host.docker.internal">>}]]'
 networks:
