--- a/metrics/docker-compose.yml
+++ b/metrics/docker-compose.yml
@@ -6,9 +6,16 @@ services:
       - "2003:2003"
     networks:
       - metrics-network
+    volumes:
+      - type: "bind"
+        source: "./influxdb_data"
+        target: "/influxdb"
+      - type: "bind"
+        source: "./influxdb.conf"
+        target: "/influxdb.conf"
+        read_only: true
     environment:
-      INFLUXDB_GRAPHITE_ENABLED: "true"
-      INFLUXDB_GRAPHITE_TEMPLATES: 'instance.measurement*'
+      INFLUXDB_CONFIG_PATH: "/influxdb.conf"
   grafana:
     image: "grafana/grafana:6.7.3"
     ports:
