--- a/metrics/influxdb.conf
+++ b/metrics/influxdb.conf
@@ -7,4 +7,7 @@
 
 [[graphite]]
   enabled = true
-  templates = ["instance.measurement*"]
+  templates = ["amoc-master.* .measurement* service=amoc,instance=master",
+               "amoc.* service.instance.measurement*",
+               "*.mongoose.* instance.measurement* service=mongooseim",
+               "measurement* service=unknown,instance=unknown"]
