adding telegraf notes

--- a/metrics/influxdb.conf
+++ b/metrics/influxdb.conf
@@ -9,5 +9,6 @@
   enabled = true
   templates = ["amoc-master.* .measurement* service=amoc,instance=master",
                "amoc.* service.instance.measurement*",
+               "telegraf.* .service.instance.measurement*",
                "*.mongoose.* instance.measurement* service=mongooseim",
                "measurement* service=unknown,instance=unknown"]
