--- a/rebar.config
+++ b/rebar.config
@@ -4,8 +4,9 @@
 
 { deps, [
     {amoc, {git, "https://github.com/esl/amoc", {tag, "2.2.1"}}},
-    {escalus, "4.2.4"},
-    {jiffy, "1.0.8"}
+    {escalus, "4.2.7"},
+    {jiffy, "1.1.1"},
+    {fusco, "0.1.1"}
 ]}.
 
 { xref_checks, [
