Build and push multi-platform image only for master

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
     needs:
       - test
       - integration_test
-#    if: github.ref == 'refs/heads/master'
+    if: github.ref == 'refs/heads/master'
     env:
       OTP_RELEASE: 25.3
     steps:
