--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,12 @@
 ]}.
 
 { deps, [
-    {amoc, {git, "https://github.com/esl/amoc", {tag, "2.2.1"}}},
+    {amoc, {git, "https://github.com/esl/amoc", {branch, "amoc_core"}}},
+    {exometer_core, {git, "https://github.com/esl/exometer_core.git", {branch, "master"}}},
+    {exometer_report_graphite, {git, "https://github.com/esl/exometer_report_graphite.git", {branch, "master"}}},
+    %% when updating amoc_rest version, don't forget to update it at ./doc/http-api.md as well.
+    {amoc_rest, {git, "https://github.com/esl/amoc_rest.git", {tag, "1.1.1"}}},
+    {docsh, "0.7.2"},
     {escalus, "4.2.7"},
     {jiffy, "1.1.1"},
     {fusco, "0.1.1"}
@@ -22,4 +27,3 @@
     {extended_start_script, true},
     {sys_config, "rel/app.config"}
   ]}.
-
