--- a/integration_test/docker-compose.yml
+++ b/integration_test/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 
 x-amoc-defaults: &amoc-defaults
-  image: "amoc:latest"
+  image: "amoc_arsenal_xmpp:latest"
   networks:
     - amoc-test-network
   volumes:
@@ -10,7 +10,7 @@ x-amoc-defaults: &amoc-defaults
       target: /extra_code_paths
   environment:
     AMOC_GRAPHITE_HOST: '"graphite"'
-    AMOC_NODES: "['amoc@amoc-master']"
+    AMOC_NODES: "['amoc_arsenal_xmpp@amoc-master']"
     AMOC_EXTRA_CODE_PATHS: '["/extra_code_paths/test1", "/extra_code_paths/test2"]'
   healthcheck:
     test: "amoc_arsenal_xmpp status"
