Fix dialyzer errors
`timer:time/0` is not exported
`escalus_connection:metadata/0` is not exported
`escalus:wait_for_stanza/0` does not declare it might throw

--- a/rebar.config
+++ b/rebar.config
@@ -14,6 +14,10 @@
     {fusco, "0.1.1"}
 ]}.
 
+{ dialyzer, [
+    {plt_extra_apps, [amoc, fusco, ranch, gun, cowboy, jsx, exml, escalus]}
+]}.
+
 { xref_checks, [
     %% enable most checks, but avoid 'unused calls' which makes amoc-arsenal fail...
     undefined_function_calls, undefined_functions, locals_not_used,
