--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,10 +42,13 @@ jobs:
         with:
           otp-version: ${{ matrix.otp }}
           rebar3-version: '3.21.0'
-      - name: build docker image
-        run: ./ci/build_docker_image.sh
-      - name: test docker image
-        run: ./ci/test_docker_image.sh
+      - run: ./ci/build_docker_image.sh
+      - run: ./ci/start_demo_cluster.sh
+      - run: ./ci/test_amoc_cluster.sh
+      - run: ./ci/test_distribute_scenario.sh
+      - run: ./ci/test_run_scenario.sh
+      - run: ./ci/test_add_new_node.sh
+
 
   docker_image:
     name: build and push multi-platform docker image
