--- a/ci/docker-compose.yml
+++ b/ci/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.4"
 
 x-amoc-defaults: &amoc-defaults
-  image: "amoc_arsenal_xmpp:latest"
+  image: "amoc-arsenal-xmpp:latest"
   networks:
     - amoc-test-network
   volumes:
@@ -26,12 +26,12 @@ services:
     hostname: "amoc-worker-1"
     ports:
       - "4001:4000"
-  amoc-worker-2: 
+  amoc-worker-2:
     <<: *amoc-defaults
     hostname: "amoc-worker-2"
     ports:
       - "4002:4000"
-  amoc-worker-3: 
+  amoc-worker-3:
     <<: *amoc-defaults
     hostname: "amoc-worker-3"
     ports:
