--- a/rebar.config
+++ b/rebar.config
@@ -14,6 +14,16 @@
     {fusco, "0.1.1"}
 ]}.
 
+{ profiles, [
+    {test, [
+        {deps, [
+            {meck, "0.9.2"},
+            {proper, "1.4.0"},
+            {fusco, "0.1.1"}
+        ]}
+    ]}
+]}.
+
 { dialyzer, [
     {plt_extra_apps, [amoc, fusco, ranch, gun, cowboy, jsx, exml, escalus]}
 ]}.
