Update amoc to use master after the latest merge

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 ]}.
 
 { deps, [
-    {amoc, {git, "https://github.com/esl/amoc", {branch, "amoc_core"}}},
+    {amoc, {git, "https://github.com/esl/amoc", {branch, "master"}}},
     {exometer_core, {git, "https://github.com/esl/exometer_core.git", {branch, "master"}}},
     {exometer_report_graphite, {git, "https://github.com/esl/exometer_report_graphite.git", {branch, "master"}}},
     %% when updating amoc_rest version, don't forget to update it at ./doc/http-api.md as well.
