--- a/rebar.config
+++ b/rebar.config
@@ -3,29 +3,10 @@
 ]}.
 
 { deps, [
-    {amoc, {git, "https://github.com/esl/amoc", {branch, "master"}}},
-    {exometer_core, {git, "https://github.com/esl/exometer_core.git", {branch, "master"}}},
-    {exometer_report_graphite, {git, "https://github.com/esl/exometer_report_graphite.git", {branch, "master"}}},
-    %% when updating amoc_rest version, don't forget to update it at ./doc/http-api.md as well.
-    {amoc_rest, {git, "https://github.com/esl/amoc_rest.git", {tag, "1.1.1"}}},
-    {docsh, "0.7.2"},
+    {amoc, {git, "https://github.com/esl/amoc", {tag, "2.2.1"}}},
     {escalus, "4.2.7"},
     {jiffy, "1.1.1"},
     {fusco, "0.1.1"}
-]}.
-
-{ profiles, [
-    {test, [
-        {deps, [
-            {meck, "0.9.2"},
-            {proper, "1.4.0"},
-            {fusco, "0.1.1"}
-        ]}
-    ]}
-]}.
-
-{ dialyzer, [
-    {plt_extra_apps, [amoc, fusco, ranch, gun, cowboy, jsx, exml, escalus]}
 ]}.
 
 { xref_checks, [
@@ -41,3 +22,4 @@
     {extended_start_script, true},
     {sys_config, "rel/app.config"}
   ]}.
+
