--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,7 +45,11 @@ jobs:
       - name: build docker image
         run: ./ci/build_docker_image.sh
       - name: test docker image
-        run: ./ci/test_docker_image.sh
+        run: ./ci/start_amoc_cluster.sh
+      - name: test docker image
+        run: ./ci/test_amoc_cluster.sh
+      - name: test docker image
+        run: ./ci/stop_amoc_cluster.sh
 
   docker_image:
     name: build and push multi-platform docker image
