building amoc-arsenal-xmpp with local version of amoc-arsenal

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 ]}.
 
 { deps, [
-    {amoc, {git, "https://github.com/esl/amoc", {tag, "2.2.1"}}},
+    {amoc_arsenal, {git, "file:///Users/denysgonchar/git/amoc-arsenal", {branch, "main"}}},
     {escalus, "4.2.7"},
     {jiffy, "1.1.1"},
     {fusco, "0.1.1"}
@@ -22,4 +22,3 @@
     {extended_start_script, true},
     {sys_config, "rel/app.config"}
   ]}.
-
