using amoc-arsenal GH repo for building amoc-arsenal-xmpp

--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 ]}.
 
 { deps, [
-    {amoc_arsenal, {git, "file:///Users/denysgonchar/git/amoc-arsenal", {branch, "main"}}},
+    {amoc_arsenal, {git, "https://github.com/esl/amoc-arsenal.git", {branch, "main"}}},
     {escalus, "4.2.7"},
     {jiffy, "1.1.1"},
     {fusco, "0.1.1"}
