fixing dialyzer CI check

--- a/rebar.config
+++ b/rebar.config
@@ -15,6 +15,10 @@
     deprecated_function_calls, deprecated_functions
 ]}.
 
+{ dialyzer, [
+    {plt_extra_apps, [amoc]}
+]}.
+
 { relx, [
     {release, {amoc_arsenal_xmpp, {git, short}}, [amoc_arsenal_xmpp, runtime_tools]},
     {debug_info, keep},
