Remove killing dependencies

--- a/rebar.config
+++ b/rebar.config
@@ -3,11 +3,18 @@
 ]}.
 
 { deps, [
-    {amoc_arsenal, {git, "https://github.com/esl/amoc-arsenal.git", {branch, "main"}}},
+    {amoc, "3.0.0"},
     {escalus, "4.2.7"},
+    {fast_scram, "0.6.0"},
     {jiffy, "1.1.1"},
     {fusco, "0.1.1"}
 ]}.
+
+{overrides,
+  [
+    {override, fast_scram, [{erl_opts, [{d, 'WITHOUT_NIFS'}]}, {deps, []}]}
+  ]
+}.
 
 { xref_checks, [
     %% enable most checks, but avoid 'unused calls' which makes amoc-arsenal fail...
