--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 
 { deps, [
     {amoc_arsenal, {git, "https://github.com/esl/amoc-arsenal.git", {branch, "main"}}},
-    {escalus, "4.2.15"},
+    {escalus, "4.2.16"},
     {jiffy, "1.1.2"},
     {fusco, "0.1.1"}
 ]}.
@@ -16,7 +16,7 @@
 ]}.
 
 { dialyzer, [
-    {plt_extra_apps, [amoc]}
+    {plt_extra_apps, [stdlib, exml, amoc, escalus, fusco, gun]}
 ]}.
 
 { relx, [
