Fix predefined metrics

--- a/rel/app.config
+++ b/rel/app.config
@@ -1,5 +1,4 @@
 %% -*-erlang-*-
-
 [
     {kernel, [
         {logger,
@@ -13,6 +12,11 @@
                formatter => {logger_formatter, #{template => [time, " [", level, "] ", msg, "\n"]}}
            }}
          ]}]},
-    {ssl, [{session_cb, amoc_always_null_ssl_session_cache}]}
-]   .
-
+    {ssl, [{session_cb, amoc_always_null_ssl_session_cache}]},
+    {amoc_arsenal,
+     [{predefined_metrics, [{times, connection},
+                            {counters, connections},
+                            {counters, connection_retries},
+                            {counters, connection_failures}]}
+     ]}
+].
