--- a/rebar.config
+++ b/rebar.config
@@ -3,7 +3,7 @@
 ]}.
 
 { deps, [
-    {amoc_arsenal, {git, "https://github.com/esl/amoc-arsenal.git", {branch, "main"}}},
+    {amoc_arsenal, {git, "https://github.com/esl/amoc-arsenal.git", {branch, "stable"}}},
     {escalus, "4.2.16"},
     {jiffy, "1.1.2"},
     {fusco, "0.1.1"}
