Make exml and gun explicit dependencies as they are already used directly

--- a/rebar.config
+++ b/rebar.config
@@ -6,6 +6,8 @@
     {amoc_arsenal, {git, "https://github.com/esl/amoc-arsenal.git", {branch, "stable"}}},
     {escalus, "4.2.16"},
     {jiffy, "1.1.2"},
+    {exml, "3.4.1", {pkg, hexml}},
+    {gun, "2.1.0"},
     {fusco, "0.1.1"}
 ]}.
 
