--- a/rebar.config
+++ b/rebar.config
@@ -1,14 +1,19 @@
+{minimum_otp_vsn, "27"}.
+
 { erl_opts, [
     debug_info
 ]}.
 
 { deps, [
-    {amoc_arsenal, {git, "https://github.com/esl/amoc-arsenal.git", {branch, "stable"}}},
+    {amoc_arsenal, {git, "https://github.com/esl/amoc-arsenal.git", {branch, "main"}}},
     {escalus, "4.2.16"},
-    {jiffy, "1.1.2"},
     {exml, "3.4.1", {pkg, hexml}},
     {gun, "2.1.0"},
     {fusco, "0.1.1"}
+]}.
+
+{ shell, [
+    {apps, [amoc_arsenal_xmpp]}
 ]}.
 
 { xref_checks, [
