--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,8 @@ jobs:
     name: OTP ${{matrix.otp_vsn}}
     strategy:
       matrix:
-        otp_vsn: ['27', '26', '25']
-        rebar_vsn: ['3.23.0']
+        otp_vsn: ['27']
+        rebar_vsn: ['3.24.0']
     runs-on: 'ubuntu-24.04'
     steps:
       - uses: actions/checkout@v4
@@ -33,7 +33,8 @@ jobs:
     name: docker container test with OTP ${{matrix.otp_vsn}}
     strategy:
       matrix:
-        otp_vsn: ['27', '26', '25']
+        otp_vsn: ['27']
+        rebar_vsn: ['3.24.0']
     runs-on: 'ubuntu-24.04'
     env:
       OTP_RELEASE: ${{ matrix.otp_vsn }}
@@ -56,7 +57,7 @@ jobs:
       - integration_test
     if: github.ref == 'refs/heads/master'
     env:
-      OTP_RELEASE: 27.0
+      OTP_RELEASE: 27.1
     steps:
       - uses: actions/checkout@v4
       - name: Set up QEMU
