Fixing CR comments

--- a/rebar.config
+++ b/rebar.config
@@ -7,6 +7,7 @@
 { deps, [
     {amoc_arsenal, {git, "https://github.com/esl/amoc-arsenal.git", {branch, "main"}}},
     {escalus, "4.4.0"},
+    {exml, "~> 4.0", {pkg, hexml}},
     {gun, "2.1.0"},
     {fusco, "0.1.1"}
 ]}.
