--- a/rebar.config
+++ b/rebar.config
@@ -6,10 +6,14 @@
 
 { deps, [
     {amoc_arsenal, {git, "https://github.com/esl/amoc-arsenal.git", {branch, "main"}}},
-    {escalus, "4.4.0"},
-    {exml, "~> 4.0", {pkg, hexml}},
-    {gun, "2.1.0"},
-    {fusco, "0.1.1"}
+    {escalus, "~> 4.5"},
+    {exml, "~> 4.1", {pkg, hexml}},
+    {gun, "~> 2.2"},
+    {fusco, "~> 0.1"}
+]}.
+
+{ overrides, [
+    {override, gun, [{deps, [{cowlib, "~> 2.15"}]}]}
 ]}.
 
 { shell, [
