--- a/rel/app.config
+++ b/rel/app.config
@@ -17,6 +17,7 @@
      [{predefined_metrics, [{times, connection},
                             {counters, connections},
                             {counters, connection_retries},
-                            {counters, connection_failures}]}
+                            {counters, connection_failures},
+                            {gauge, amoc_users_size}]}
      ]}
 ].
