Prevent duplicate logs ('default' exists unless replaced)

--- a/rel/app.config
+++ b/rel/app.config
@@ -2,7 +2,7 @@
 [
     {kernel, [
         {logger,
-         [{handler, log_to_console, logger_std_h,
+         [{handler, default, logger_std_h,
            #{
                formatter => {logger_formatter, #{template => [time, " [", level, "] ", msg, "\n"]}}
            }},
